--- a/src/app/alliancehelper/alliancehelper.component.html
+++ b/src/app/alliancehelper/alliancehelper.component.html
@@ -3,7 +3,7 @@
         <h2 matTooltip="Population of subject nations is weighted by a factor of 0.66">Total Power Bloc Population*</h2>
         <div class="population-display" [class.over-threshold]="isOverThreshold()">
             <span class="population-value">{{ formatPopulation(totalPopulation) }}</span>
-            <span class="population-threshold" matTooltip="Alliance population threshold"> / {{
+            <span class="population-threshold" matTooltip="{{ getFormulaExplanationTooltip() }}"> / {{
                 formatPopulation(userThreshold) }}</span>
         </div>
         <div class="population-gauge-container">
