refactored resource map to be much more concise. polygonselect now use new class of toggleable buttons

--- a/src/app/discord-field/discord-field.component.scss
+++ b/src/app/discord-field/discord-field.component.scss
@@ -1,6 +1,7 @@
 @use '@angular/material' as mat;
 
 :host {
+    color: var(--text-color);
     @include mat.button-overrides((filled-container-color: rgb(88, 101, 242),
         ));
 }
