--- a/src/app/save-view/save-view.component.scss
+++ b/src/app/save-view/save-view.component.scss
@@ -1,10 +1,6 @@
 @use '@angular/material' as mat;
 
 :host {
-    --mat-sys-on-surface: var(--text-color);
-    --mat-sys-title-small-size: 2em;
-    --mat-sys-title-small-font: var(--font-family);
-    --mat-sys-primary: var(--text-color);
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -89,7 +85,16 @@
 
 .table-wrapper {
     padding: 0.5rem;
-    margin: 2rem 21%;
+    margin: 2rem 5%;
     border-radius: 0.5rem;
     background-color: var(--background-color);
+}
+
+button[mat-icon-button] {
+    opacity: 0.5 !important;
+}
+
+button[mat-icon-button].selected {
+    background-color: rgba(25, 118, 210, 0.2);
+    opacity: 1 !important;
 }
