MVP of save map view with goods and simple map modes

--- a/src/app/resourcemap/resourcemap.component.html
+++ b/src/app/resourcemap/resourcemap.component.html
@@ -1,7 +1,2 @@
-<div class="lab-container">
-    <div class="map-wrapper">
-        <app-slab-map-view [geoJsonFetcher]="geoJsonFetcher" [viewModes]="viewModes"
-            [behaviorConfig]="behaviorConfig">
-        </app-slab-map-view>
-    </div>
-</div>
+<app-slab-map-view [geoJsonFetcher]="geoJsonFetcher" [viewModes]="viewModes" [behaviorConfig]="behaviorConfig">
+</app-slab-map-view>
