MatExpansionPanels are so cool

--- a/src/app/viewers/polygon-select/polygon-select.component.html
+++ b/src/app/viewers/polygon-select/polygon-select.component.html
@@ -6,15 +6,24 @@
     </div>
     }
     <div class="button-group-left">
-        @for (btn of customButtons; track $index) {
-        <button class="corner-button custom" (click)="buttonClicked.emit(btn); btn.action(); $event.stopPropagation()" [title]="btn.title"
-            [class.active]="btn.canBeToggled && btn.isToggled">
-            @if (btn.isImage) {
-            <img [src]="btn.icon" [alt]="btn.title" class="button-icon">
-            } @else {
-            <mat-icon fontSet="material-symbols-outlined">{{ btn.icon }}</mat-icon>
-            }
-        </button>
+        @for (entry of getGroupedButtonEntries(); track entry[0]) {
+        <mat-expansion-panel class="category-panel">
+            <mat-expansion-panel-header>
+                <mat-panel-title class="category-title">{{ entry[0] }}</mat-panel-title>
+            </mat-expansion-panel-header>
+            <div class="category-buttons">
+                @for (btn of entry[1]; track btn.title) {
+                <button class="corner-button custom" (click)="buttonClicked.emit(btn); btn.action(); $event.stopPropagation()" [title]="btn.title"
+                    [class.active]="btn.canBeToggled && btn.isToggled">
+                    @if (btn.isImage) {
+                    <img [src]="btn.icon" [alt]="btn.title" class="button-icon">
+                    } @else {
+                    <mat-icon fontSet="material-symbols-outlined">{{ btn.icon }}</mat-icon>
+                    }
+                </button>
+                }
+            </div>
+        </mat-expansion-panel>
         }
     </div>
 
