--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -12,12 +12,12 @@ html {
             typography: 'Titillium Web',
             density: 0));
     @include mat.form-field-overrides((disabled-input-text-placeholder-color: orange,
-        disabled-leading-icon-color: red,
-        //container-vertical-padding: 2em,
-        filled-with-label-container-padding-top: 0em,
-        filled-with-label-container-padding-bottom: 0em,
-        container-height: 1em,
-    ));
+            disabled-leading-icon-color: red,
+            //container-vertical-padding: 2em,
+            filled-with-label-container-padding-top: 0em,
+            filled-with-label-container-padding-bottom: 0em,
+            container-height: 1em,
+        ));
 }
 
 :root {
@@ -52,9 +52,11 @@ html {
 
     --mat-sys-secondary-container: var(--lighter-background-color);
     --mat-sys-on-secondary-container: var(--text-color);
-    
+
     --mat-sys-outline: var(--border-color);
     --mat-sys-primary: rgb(0, 180, 0);
+
+    --header-background-color: rgb(20, 20, 20);
 }
 
 .light-theme {
@@ -68,6 +70,7 @@ html {
     --faded-border-color: rgba(0, 0, 0, 0.2);
     --faded-text-color: rgba(0, 0, 0, 0.5);
     --void-color: rgb(240, 240, 240);
+    --header-background-color: rgb(240,240,255);
 
     --mat-sys-surface: var(--light-theme-background-color);
     --mat-sys-on-surface: var(--light-theme-text-color);
@@ -77,7 +80,7 @@ html {
     --mat-sys-on-secondary-container: var(--light-theme-text-color);
     --mat-sys-outline: var(--border-color);
 
-    --mat-sys-primary: rgb(0, 0, 215);
+    --mat-sys-primary: rgb(100, 100, 255);
 }
 
 .dark-theme {
