--- a/src/app/mc/mega-campaign/mega-campaign.component.scss
+++ b/src/app/mc/mega-campaign/mega-campaign.component.scss
@@ -34,15 +34,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 85%; 
-    height: 85%;
-    max-width: 85%;
-    max-height: 85%;
+    flex: 1;
     box-sizing: border-box;
     overflow: auto;
     padding: 2em;
     gap: 1em;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.35);
     border-radius: 0.5em;
     background-color: var(--background-color);
 }
@@ -81,10 +77,12 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
-    gap: 2em;
+    gap: 4em;
     width: 100%;
-    box-shadow: var(--box-shadow-large);
+    box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.5);
     margin-bottom: 1em;
+    padding: 2em;
+    border-radius: 0.5em;
 }
 
 h1 {
