--- a/src/app/paradox/paradox.component.scss
+++ b/src/app/paradox/paradox.component.scss
@@ -42,7 +42,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0 2em;
 }
 
 .spacer-right {
@@ -86,6 +85,14 @@
 
     &:hover {
         background-color: var(--faded-border-color);
+    }
+
+    &.toolbar-action-disabled {
+        opacity: 0.5;
+
+        &:hover {
+            background-color: transparent;
+        }
     }
 }
 
@@ -168,7 +175,18 @@
     background-color: var(--void-color);
 }
 
-.mat-menu-panel {
-    transition: none !important;
-    animation: none !important;
+.hello-wrapper {
+    padding-left: 1rem;
+    font-family: "Permanent Marker", cursive;
+    display: flex;
+    align-items: baseline;
+}
+
+.hello {
+    font-size: 0.6em;
+    color: var(--mat-sys-primary);
+}
+
+.username {
+    font-size: 1.0em;
 }
