--- a/src/app/vic3-country-table/vic3-country-table.component.html
+++ b/src/app/vic3-country-table/vic3-country-table.component.html
@@ -2,28 +2,53 @@
   @for (col of internalColumns; track col?.def ?? $index; let index = $index) {
     @if (col) {
     <ng-container [matColumnDef]="col.def" [sticky]="false">
-      <th mat-header-cell *matHeaderCellDef [mat-sort-header]="col.sortable ? col.def : ''"
-        [matTooltip]="col.tooltip" matTooltipClass="tooltip" [cdkContextMenuTriggerFor]="headermenu"
-        (cdkContextMenuOpened)="selectedColumn = col">
-        @if (col.headerImage) {
-          @switch (col.headerImageType) {
-            @case (0) {
-              <img [src]="col.headerImage" alt="" style="max-height:1.4em;vertical-align:middle;" />
+      @if (col.sortable) {
+        <th mat-header-cell *matHeaderCellDef [mat-sort-header]="col.def"
+          [matTooltip]="col.tooltip" matTooltipClass="tooltip" [cdkContextMenuTriggerFor]="headermenu"
+          (cdkContextMenuOpened)="selectedColumn = col">
+          @if (col.headerImage) {
+            @switch (col.headerImageType) {
+              @case (0) {
+                <img [src]="col.headerImage" alt="" style="max-height:1.4em;vertical-align:middle;" />
+              }
+              @case (1) {
+                <mat-icon>{{ col.headerImage }}</mat-icon>
+              }
+              @case (2) {
+                <mat-icon fontSet="material-symbols-outlined">{{ col.headerImage }}</mat-icon>
+              }
+              @default {
+                <img [src]="col.headerImage" alt="" style="max-height:1.4em;vertical-align:middle;" />
+              }
             }
-            @case (1) {
-              <mat-icon>{{ col.headerImage }}</mat-icon>
-            }
-            @case (2) {
-              <mat-icon fontSet="material-symbols-outlined">{{ col.headerImage }}</mat-icon>
-            }
-            @default {
-              <img [src]="col.headerImage" alt="" style="max-height:1.4em;vertical-align:middle;" />
-            }
+          } @else {
+            {{col.header}}
           }
-        } @else {
-          {{col.header}}
-        }
-      </th>
+        </th>
+      } @else {
+        <th mat-header-cell *matHeaderCellDef
+          [matTooltip]="col.tooltip" matTooltipClass="tooltip" [cdkContextMenuTriggerFor]="headermenu"
+          (cdkContextMenuOpened)="selectedColumn = col">
+          @if (col.headerImage) {
+            @switch (col.headerImageType) {
+              @case (0) {
+                <img [src]="col.headerImage" alt="" style="max-height:1.4em;vertical-align:middle;" />
+              }
+              @case (1) {
+                <mat-icon>{{ col.headerImage }}</mat-icon>
+              }
+              @case (2) {
+                <mat-icon fontSet="material-symbols-outlined">{{ col.headerImage }}</mat-icon>
+              }
+              @default {
+                <img [src]="col.headerImage" alt="" style="max-height:1.4em;vertical-align:middle;" />
+              }
+            }
+          } @else {
+            {{col.header}}
+          }
+        </th>
+      }
       <td mat-cell *matCellDef="let element; let i = index"
         [ngClass]="{'negative-cell': safeGetCellValue(col, element, i) < 0}">
         @if (col.isImage) {
