--- a/src/app/mc/mega-campaign/mega-campaign.component.scss
+++ b/src/app/mc/mega-campaign/mega-campaign.component.scss
@@ -6,60 +6,39 @@
     color: var(--text-color);
     width: 100%;
     height: 100%;
+    padding: 0 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     overflow-y: auto;
-    max-height: 100%;
+    overflow-x: hidden;
 
-    @include mat.button-overrides((
-        protected-container-color: var(--mat-sys-primary),
-        protected-label-text-color: var(--mat-sys-primary-container),
-        protected-container-height: 2em,
-        protected-horizontal-padding: 24px,
-        protected-label-text-size: 1.2em,
-        protected-state-layer-color: var(--mat-sys-primary-container),
-        protected-hover-state-layer-opacity: 0.12,
-        protected-focus-state-layer-opacity: 0.16,
-        protected-pressed-state-layer-opacity: 0.24,
-        protected-ripple-color: var(--mat-sys-primary-container),
-        protected-hover-container-elevation-shadow: 0 6px 12px rgba(0, 0, 0, 0.4),
-        protected-pressed-container-elevation-shadow: 0 1px 3px rgba(0, 0, 0, 0.25),
-    ));
+    @include mat.button-overrides((protected-container-color: var(--mat-sys-primary),
+            protected-label-text-color: var(--mat-sys-primary-container),
+            protected-container-height: 2em,
+            protected-horizontal-padding: 24px,
+            protected-label-text-size: 1.2em,
+            protected-state-layer-color: var(--mat-sys-primary-container),
+            protected-hover-state-layer-opacity: 0.12,
+            protected-focus-state-layer-opacity: 0.16,
+            protected-pressed-state-layer-opacity: 0.24,
+            protected-ripple-color: var(--mat-sys-primary-container),
+            protected-hover-container-elevation-shadow: 0 6px 12px rgba(0, 0, 0, 0.4),
+            protected-pressed-container-elevation-shadow: 0 1px 3px rgba(0, 0, 0, 0.25),
+        ));
 }
 
 .main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    flex: 1;
+    width: 100%;
     box-sizing: border-box;
-    overflow: auto;
-    padding: 2em;
+    padding: 1.5em 5%;
     gap: 1em;
     border-radius: 0.5em;
+    padding-top: 1em;
     background-color: var(--background-color);
-}
-
-.pseudo-component {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.player-list-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex-grow: 1;
-    gap: 1em;
-    width: 100%;
-    padding: 0em 5em;
 }
 
 .button-container {
@@ -79,9 +58,10 @@
     justify-content: center;
     gap: 4em;
     width: 100%;
+    padding: 0em 5em;
     box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.5);
     margin-bottom: 1em;
-    padding: 2em;
+    padding: 2em 5em;
     border-radius: 0.5em;
 }
 
@@ -89,18 +69,15 @@ h1 {
     font-family: 'Permanent Marker', cursive;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-decoration: underline;
-    margin-top: 1em;
 }
 
 .plot-container {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.back-icon {
-    transform: scale(2);
+    border-radius: 0.5em;
+    margin-top: 1em;
 }
