--- a/src/app/saveanalysis/eu4-save-view/eu4-save-view.component.html
+++ b/src/app/saveanalysis/eu4-save-view/eu4-save-view.component.html
@@ -1,1 +1,17 @@
-<p>eu4-save-view works!</p>
+<mat-tab-group>
+    <mat-tab label="Countries">
+        <ng-template matTabContent>
+            <div class="table-container">
+                <app-table [rowElements]="getRowElements()" [columns]="columns"></app-table>
+            </div>
+        </ng-template>
+    </mat-tab>
+    <mat-tab>
+        <ng-template mat-tab-label>
+            <mat-icon>map</mat-icon>
+        </ng-template>
+        <app-slab-map-view [geoJsonFetcher]="geoJsonFetcher" [viewModes]="availableMapViewModes"
+            [behaviorConfig]="behaviorConfig">
+        </app-slab-map-view>
+    </mat-tab>
+</mat-tab-group>
